fix: traveller image format
Traveller image overlaps other areas.  Make it fit into image box.

--- a/static/styles/twodsix.css
+++ b/static/styles/twodsix.css
@@ -344,13 +344,14 @@ img.character-info-mask {
   margin-left: 2.1em;
   position: absolute;
   width: 19.3em;
-  height: 100%;
+  height: 20em;
+  text-align: center;
   z-index: 0;
 }
 
 .character-photo img {
-  width: 100%;
   vertical-align: middle;
+  max-height: 100%;
   z-index: -1;
 }
 
